--- a/api/package.json
+++ b/api/package.json
@@ -16,12 +16,19 @@
   "author": "Manoj",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.5",
+    "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "pg": "^8.16.3",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/lodash": "^4.17.20",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
