--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "module": "ESNext", // Use ESNext for ESM
+    "module": "node16", // Use ESNext for ESM
     "target": "ES2020", // Target modern ECMAScript versions
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist", // Output directory for compiled files
